--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,27 @@
-.App {
+:root {
+  --light1 : #feffdb;
+  --light2 : #ffc60b;
+  --light3 : #ff8b00;
+  --light4 : #444444;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  background: var(--light1);
+}
+
+.header{
+  background: var(--light4);
+  color: var(--light3);
+ 
+  box-shadow: 0px 0px 10px var(--light3);
+}
+
+.logo {
+  font-family: 'Pacifico', cursive;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 1em 0;
+  font-size: 1.5rem;
 }
