--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,12 +10,12 @@ body{
   padding: 0;
   font-size: 100%;
   background: var(--light1);
+  font-family: 'Poppins', sans-serif;
 }
 
 .header{
   background: var(--light4);
   color: var(--light3);
- 
   box-shadow: 0px 0px 10px var(--light3);
 }
 
@@ -24,4 +24,21 @@ body{
   text-align: center;
   margin: 1em 0;
   font-size: 1.5rem;
+}
+
+.search-input {
+  border-radius: 10px;
+  background: var(--light1);
+  border: 1px solid var(--light2);
+  
+}
+
+.search-input:focus{
+  background: var(--light2);
+  color: var(--light4);
+  box-shadow: 0px 0px 10px  var(--light2);
+}
+
+.fa-search {
+  color: var(--light4)
 }
