--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,13 +17,18 @@ body{
   background: var(--light4);
   color: var(--light3);
   box-shadow: 0px 0px 10px var(--light3);
+  text-align: center;
 }
 
 .logo {
   font-family: 'Pacifico', cursive;
-  text-align: center;
-  margin: 1em 0;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  padding: 0;
+}
+
+.credits{
+  padding: 0;
+  margin: 0;
 }
 
 .search-input {
@@ -42,3 +47,71 @@ body{
 .fa-search {
   color: var(--light4)
 }
+
+.feed {
+  width: 90%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.container-items {
+  color: var(--light3);
+  text-shadow: 0px 0px 1px var(--light4);
+  letter-spacing: .05rem;
+  width: 400px;
+  font-size: 1rem;
+  margin: 1em 1em;
+
+  
+}
+
+.container-items img {
+  width: 100%;
+  box-shadow: 0px 0px 10px var(--light4);
+}
+
+.container-items img:hover{
+  box-shadow: 0px 0px 20px var(--light3);
+}
+
+
+
+.container-details {
+  text-align: center;
+  width: 100%;
+  margin: 3em 0;
+  padding: 0 1em;
+}
+
+.container-details img {
+  margin-bottom: 1em;
+  box-shadow: 0px 0px 10px var(--light4);
+}
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.loadercenter {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%); */
+}
+
+
+@media (max-width: 768px) { 
+  
+  .feed {
+    width: 90%;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+ }
